--- a/style.css
+++ b/style.css
@@ -1,19 +1,7 @@
-html,
-body {
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
 
-#renderCanvas {
+#canvas {
     width: 100%;
     height: 100%;
     touch-action: none;
 }
 
-#canvasZone {
-    width: 100%;
-    height: 100%;
-}
