--- a/style.css
+++ b/style.css
@@ -1,24 +1,9 @@
-html,
-body {
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
+* {
     margin: 0;
     padding: 0;
 }
 
-#renderCanvas {
+canvas {
     width: 100%;
     height: 100%;
-    touch-action: none;
-}
-
-#canvasZone {
-    width: 100%;
-    height: 100%;
-}
-
-.cantainer{
-    display: flex;
-    gap: 200px;
 }
